--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
         <p>Hello! My name is James Gassaway. I am majoring in Computer Science.</p>
         <p>I'm taking this course to learn more about Web Design and programming. I've taken Web Design courses in the past.</p>
         <p>I've been a member of the church for my entire life. I just recently returned from serving a mission in Cape Coast, Ghana. I'm wearing a shirt made from there.</p>
+        <p>Another Paragraph.</p>
     </body>
 </html>
