first push wwr html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WDD130 Portal Page</title>
+        <link href="portal.css" rel="stylesheet">
     </head>
     <body>
-        <nav>
+        <nav id="primary">
             <a href="wwr/index.html">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
             <a href="positioning.html">Positioning Activity</a>
@@ -16,9 +17,9 @@
         </nav>     
         <h1>James Gassaway</h1>
         <img width="300" src="James_cruise_ship.jpg" alt="James on a cruise ship">
-        <p>Hello! My name is James Gassaway. I am majoring in Computer Science.</p>
+        <p class="background">Hello! My name is James Gassaway. I am majoring in Computer Science.</p>
         <p>I'm taking this course to learn more about Web Design and programming. I've taken Web Design courses in the past.</p>
-        <p>I've been a member of the church for my entire life. I just recently returned from serving a mission in Cape Coast, Ghana. I'm wearing a shirt made from there.</p>
+        <p class="background">I've been a member of the church for my entire life. I just recently returned from serving a mission in Cape Coast, Ghana. I'm wearing a shirt made from there.</p>
         <p>Another Paragraph.</p>
     </body>
 </html>
