--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
         <link href="portal.css" rel="stylesheet">
     </head>
     <body>
-        <nav id="primary">
-            <a href="wwr/index.html">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-            <a href="positioning.html">Positioning Activity</a>
-            <a href="#">Personal Website</a>
-            <a href="#">Personal Siteplan</a>
-            <a href="https://churchofjesuschrist.org" target="_blank">Church Website</a>
-        </nav>     
-        <h1>James Gassaway</h1>
-        <img width="300" src="James_cruise_ship.jpg" alt="James on a cruise ship">
-        <p class="background">Hello! My name is James Gassaway. I am majoring in Computer Science.</p>
-        <p>I'm taking this course to learn more about Web Design and programming. I've taken Web Design courses in the past.</p>
-        <p class="background">I've been a member of the church for my entire life. I just recently returned from serving a mission in Cape Coast, Ghana. I'm wearing a shirt made from there.</p>
-        <p>Another Paragraph.</p>
+        <div id="content">
+            <nav id="primary">
+                <a href="wwr/index.html">White Water Rafting Website</a>
+                <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+                <a href="positioning.html">Positioning Activity</a>
+                <a href="#">Personal Website</a>
+                <a href="#">Personal Siteplan</a>
+                <a href="https://churchofjesuschrist.org" target="_blank">Church Website</a>
+            </nav>     
+            <h1>James Gassaway</h1>
+            <img src="James_cruise_ship.jpg" alt="James on a cruise ship">
+            <p class="background">Hello! My name is James Gassaway. I am majoring in Computer Science.</p>
+            <p>I'm taking this course to learn more about Web Design and programming. I've taken Web Design courses in the past.</p>
+            <p class="background">I've been a member of the church for my entire life. I just recently returned from serving a mission in Cape Coast, Ghana. I'm wearing a shirt made from there.</p>
+            <p>Another Paragraph.</p>
+            <footer>
+                <p>WDD130 - 2023</p>
+        </footer>
+        </div>
     </body>
 </html>
