--- a/ICEchallengeWeek5/index.html
+++ b/ICEchallengeWeek5/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ICE Challenge Week 5</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        
+    <header id="headingpict">
+        <img src="images/w05_circles.jpg" alt="Circle Image">
     </header>
+    <main id="content">
+        <img class="circles" src="images/w05_ice_image_desk.jpg" alt="Desk">
+        <img class="circles" src="images/w05_ice_image_graphic.png" alt="graphic">
+        <img class="circles" src="images/w05_ice_image_person.jpg" alt="person">
+    </main>
 </body>
 </html>
