MKTG project update

--- a/mktproject/site-plan.html
+++ b/mktproject/site-plan.html
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          General Tips <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Getting Good Scores  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,97 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        "Welcome to the Mario Kart Tour Guide! Here, you can find information about the game Mario Kart Tour including:
+Getting Started in Mario Kart Tour
+Tours, Cups, and Gifts
+Collecting Characters, Karts, and Gliders
+Coins, Tokens, and Rubies
+Getting High Scores
+Winning Rankings
+
+In other words, If you need information on how to play Mario Kart Tour and how to dominate the rankings, you’re in the right place.
+
+Getting Started
+	Getting Started in Mario Kart Tour can take some time. When you first boot up the app, you won’t have many options available to you. You can unlock most of these options by completing the first cup.
+	Once you’ve completed the first cup, you’ll have all the rest of the cups available to you, along with many of the options. The gameplay loop resembles something like this:
+Play races (and battles) to earn points
+Earn enough points to earn Grand Stars
+Earn enough Grand Stars to unlock Tour Gifts
+Tour Gifts give you cool stuff like Coins, Rubies, Characters, Karts, Gliders and Tickets.
+Unlocking stuff makes it easier to earn points and reach high scores.
+	While Mario Kart Tour may seem a lot different from other games in the series at first, you’ll discover over time that the core of the game is still Mario Kart.""
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img class="banner" src="images/Mario_Kart_Tour_banner.webp" alt="Mario Kart Banner">
+        <img class="banner" src="images/1200px-Mario_Kart_Tour_banner_Mario_and_Miis.webp" alt="Mario Kart Logo">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Getting Cool Stuff</h3>
       <p>
-        [Written copy for the Page 2 here]
+        "Getting Cool Stuff
+The unlockable items in Mario Kart Tour fall into one of three categories:
+Characters
+Karts
+Gliders
+	You’ll start out with the majority of these items locked. There are many ways to unlock these items, such as:
+Finding them in Tour Gifts
+Firing items out of Tour Pipes
+Placing well in Ranked Competitions
+Completing Challenges
+Purchasing them in the various shops with coins, rubies or tokens
+Purchasing them with real money as microtransactions
+
+Rarity
+	Keep in mind that an item’s rarity affects how hard it is to obtain that item. For instance, High-end Drivers are harder to get than a Super Driver. A Super Driver is harder to get than a Normal Driver. Rarity also affects other things as well:
+Rarer items are less common to be shot from pipes
+Rarer items are among the highest rewards for placing well in tiers
+Rarer items are more expensive in shops
+Rarer items have a higher Base Stat Total
+Rarer items generally have a higher amount of Favorite Courses.
+
+Coins Tokens and Rubies
+Coins, Tokens and Rubies are the main forms of currency in Mario Kart Tour. Each currency has a different use:
+Coins are collected from races as you pick them off the road, collect them as items, or gain every 1,000 points from a race. They can be used to buy things in the Daily Selects shop or the Tier Shop. You can also get a bunch of coins in Coin Rush
+Tokens are collected from races. It varies from tour to tour how to collect them, but generally tokens are collected from finding them in races, or by making opponents crash. Tour Tokens can only be redeemed in the Token Shop. Unlike other currencies, Tour Tokens are not carried over from Tour to Tour and will reset once a Tour finishes.
+Rubies are collected from Tour Gifts, completed Challenges, and the Token Shop. You can use them to purchase items in the Spotlight Shop and Mii Racing Suit Shop. Rubies are the rarest of the currencies and the hardest to collect. You can also use rubies to activate Coin Rush, but… why would you do that?"
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/MKT_Icon_Ruby_2.webp" alt="MKT Ruby">
+        <img src="images/MKT_Icon_PipeFrameRed.webp" alt="MKT Kart">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Getting Good Scores</h3>
       <p>
-        [Written copy for the Page 3 here]
+        "Okay, I get it. Enough background. How do I get really big scores in Mario Kart Tour? The answer is… little by little. Your course score is affected by many elements, including things both inside and outside the actual race. All of these affect your final score. It may take some time to figure out how to get a lot of points in one race, but here are some tips for improving your scores:
+	Outside Race elements:
+Base Stat Totals of your Characters, Karts, and Items
+Raise your Base Stats to the max! If you cap out, use a points-cap ticket to go even further.
+Base Levels of any Favorite courses of your Characters, Karts, and Items.
+Any Favorite Characters, Karts or Gliders that have a skill level of 2 or higher get their base stat multiplied. Anything with an enormous lever gets a ton of points like this.
+The Race’s CC
+Racing at a faster CC grants you more points for winning. Additionally, the CPU characters race better and are harder to defeat at faster CCs too.
+Your Player Level
+Your player level increases as you win races. The placement score you win at the end of a race is affected by how high your player level is.
+Inside Race Elements:
+Doing a rocket start
+Press down on “2” and release on “GO!” for the best rocket starts.
+Performing actions like doing turbo boosts, using speed panels, and doing jump boosts
+All these actions grant a few points at a time, but they really do make a big difference in the end
+Collecting coins and mushrooms off the road
+Collecting Coins and Mushrooms will give you a bunch of Bonus points
+Hitting Opponents with Items
+Taking out your opponents grants a lot of bonus points. Additionally, Battle mode has a “Well Done!” bonus if you manage to win the battle within 90 seconds.
+Interacting with course elements
+Things like pumpkins, Goombas, Rocky Wrenches, etc. give you points. Get creative with the course elements to boost your scores.
+Your final placement
+Obviously, placing 1st will get you the biggest reward. Additionally, having a higher player level increases the reward you get!
+Doing actions in succession and getting combos.
+Combos increase the amount of points you get after performing actions during a race. Getting a big string of combos means getting a bunch of additional bonus points."
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/MKT_Icon_Item.webp" alt="image for page3">
+        <img src="images/MK8D_Toad_Mechanic_Artwork.webp" alt="image for page3">
 
       </ul>
       <hr>
