--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
                 <a href="positioning.html">Positioning Activity</a>
                 <a href="#">Personal Website</a>
-                <a href="#">Personal Siteplan</a>
+                <a href="mktproject/site-plan.html">Personal Siteplan</a>
                 <a href="https://churchofjesuschrist.org" target="_blank">Church Website</a>
             </nav>     
             <h1>James Gassaway</h1>
