--- a/mktproject/site-plan.html
+++ b/mktproject/site-plan.html
@@ -225,23 +225,23 @@ Combos increase the amount of points you get after performing actions during a r
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
 
-      <h3>Home</h3>
+      <h3>Home Page</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The Home will have some basic details, the gettign started section, and a navigation at the bottom.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/wireframe-home.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Getting Cool Stuff Page</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        Page 2 will have information including some bullet point information
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/wireframe-page2.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Getting Good Scores Page</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Page 3 will have drop-down buttons that display information when clicked on.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/wireframe-page3.png" alt="page 3 wireframe">
     </main>
   </body>
 
