change to index

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                 <a href="wwr/index.html">White Water Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
                 <a href="positioning.html">Positioning Activity</a>
-                <a href="#">Personal Website</a>
-                <a href="mktproject/site-plan.html">Personal Siteplan</a>
+                <a href="mktproject/index.html">Personal Website</a>
+                <a href="mktproject/site-plan-MKTG.html">Personal Siteplan</a>
                 <a href="https://churchofjesuschrist.org" target="_blank">Church Website</a>
             </nav>     
             <h1>James Gassaway</h1>
