--- a/mktproject/index.html
+++ b/mktproject/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mario Kart Tour Guide</title>
+    <link type="text/css" rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
@@ -22,34 +23,44 @@
             <img id="banner-img" src="images/Mario_Kart_Tour_banner.webp" alt="Mario Kart Tour Banner">
         </div>
         <section id="banner-msg">
-            <h4>The Online Guide for Mario Kart Tour!</h4>
+            <h1>The Online Guide for Mario Kart Tour!</h1>
         </section>
     </div>
     <main>
-        <h2>Welcome to the Mario Kart Tour Guide!</h2>
-        <p>Here, you can find information about the game Mario Kart Tour including: Getting Started in Mario Kart Tour Tours, Cups, and Gifts Collecting Characters, Karts, and Gliders Coins, Tokens, and Rubies Getting High Scores Winning Rankings In other words, If you need information on how to play Mario Kart Tour and how to dominate the rankings, you're in the right place.</p>
-        <img id="toad-img" src="images/MK8D_Toad_Mechanic_Artwork.webp" alt="Pit Crew Toad">
+        <div id="title-card-div">
+            <h2>Welcome to the Mario Kart Tour Guide!</h2>
+            <img id="toad-img" src="images/1600px-MKT_Mario_and_Toad.png" alt="Pit Crew Toad">
+            <p>Here, you can find information about the game Mario Kart Tour including: Getting Started in Mario Kart Tour Tours, Cups, and Gifts Collecting Characters, Karts, and Gliders Coins, Tokens, and Rubies, Getting High Scores, Winning Rankings...</p>
+            <p>In other words, If you need information on how to play Mario Kart Tour and how to dominate the rankings, you're in the right place!</p>
+        </div>
 
         <h2>Getting Started</h2>
-        <p>
-            Getting Started in Mario Kart Tour can take some time. When you first boot up the app, you won't have many options available to you. You can unlock most of these options by completing the first cup. Once you've completed the first cup, you'll have all the rest of the cups available to you, along with many of the options. The gameplay loop resembles something like this: Play races (and battles) to earn points Earn enough points to earn Grand Stars Earn enough Grand Stars to unlock Tour Gifts Tour Gifts give you cool stuff like Coins, Rubies, Characters, Karts, Gliders and Tickets. Unlocking stuff makes it easier to earn points and reach high scores. While Mario Kart Tour may seem a lot different from other games in the series at first, you'll discover over time that the core of the game is still Mario Kart.
+        <p class="center-body-p">
+            Getting Started in Mario Kart Tour can take some time. When you first boot up the app, you won't have many options available to you. You can unlock most of these options by completing the first cup. Once you've completed the first cup, you'll have all the rest of the cups available to you, along with many of the options. The gameplay loop resembles something like this:
         </p>
-        <h2>Discover More:</h2>
-        <div id="home-grid">
-            <div id="home-grid-gt-side">
-                <img id="home-grid-gt-img" src="images/1600px-MKT_Mario_and_Toad.png" alt="Mario and Toad">
-                <h4>General Tips</h4>
-            </div>
-            <div id="home-grid-ghs-side">
-                <img id="home-grid-ghs-img" src="images/800px-MKT_Lakitu_artwork.png" alt="Lakitu">
-                <h4>Getting High Scoress</h4>
+        <ul class="center-body-p">
+            <li>Play races (and battles) to earn points</li>
+            <li>Earn enough points to earn Grand Stars</li>
+            <li>Earn enough Grand Stars to unlock Tour Gifts</li>
+            <li>Open Tour Gifts to give you cool stuff like Coins, Rubies, Characters, Karts, Gliders and Tickets.</li>
+        </ul>
+        <p class="center-body-p">
+            Unlocking stuff makes it easier to earn points and reach high scores. While Mario Kart Tour may seem a lot different from other games in the series at first, you'll discover over time that the core of the game is still Mario Kart.
+        </p>
+        </p>
+        <div id="home-card">
+            <h2>Discover More:</h2>
+            <div id="home-grid">
+                    <img id="home-grid-gt-img" src="images/MK8D_Toad_Mechanic_Artwork.webp" alt="Mario and Toad"></a>
+                    <a  id="home-grid-gt-p" href="general-tips.html"><h4>General Tips</h4></a>
+                    <img id="home-grid-ghs-img" src="images/800px-MKT_Lakitu_artwork.png" alt="Lakitu"></a>
+                    <a  id="home-grid-ghs-p" href="getting-high-scores.html"><h4>Getting High Scoress</h4></a>
             </div>
         </div>
     </main>
     <footer>
         <p>Mario Kart Tour Guide &copy; 2023 - James Gassaway</p>
-        <p><a href="site-plan-MKTG.html">Site Plan</a></p>
-        <p>All Images were pulled from mariowiki.com</p>
+        <p>All Images were pulled from www.mariowiki.com</p>
         <div class="social">
             <a href="#" target="_blank">Back to Top</a>
         </div>
