--- a/mktproject/index.html
+++ b/mktproject/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a  href="index.html" id="MKTGLogo">
+        <a  href="index.html" id="mktg-logo">
             <img class="logo" src="images/MKTGLogo.png" alt="MKTG Logo">
         </a>
         <nav>
