MKTG getting started

--- a/mktproject/general-tips.html
+++ b/mktproject/general-tips.html
@@ -19,10 +19,10 @@
         </nav>
     </header>
     <main>
-        <h1>
+        <h2 class="red-title">
             Getting Cool Stuff
-        </h1>
-        <h4>The unlockable items in Mario Kart Tour fall into one of three categories:</h4>
+        </h2>
+        <h4 class="center-text">The unlockable items in Mario Kart Tour fall into one of three categories:</h4>
         <div id="ckg-grid">
             <section class="ckg-characters-card">
                 <p>Characters</p>
@@ -37,8 +37,8 @@
                 <img src="images/MKT_Icon_SuperGliderRed.png" alt="Gliders">
             </section>
         </div>
-        <h4>You’ll start out with the majority of these items locked. There are many ways to unlock these items, such as:</h4>
-            <ul>
+        <h4 class="center-text">You’ll start out with the majority of these items locked. There are many ways to unlock these items, such as:</h4>
+            <ul class="center-body-p">
                 <li>Finding them in Tour Gifts</li>
                 <li>Firing items out of Tour Pipes</li>
                 <li>Placing well in Ranked Competitions</li>
@@ -46,26 +46,31 @@
                 <li>Purchasing them in the various shops with coins, rubies or tokens</li>
                 <li>Purchasing them with real money as microtransactions</li>
             </ul>
-        <h4>Rarity</h4>
-        <p>	Keep in mind that an item’s rarity affects how hard it is to obtain that item. For instance, High-end Drivers are harder to get than a Super Driver. A Super Driver is harder to get than a Normal Driver. Rarity also affects other things as well:</p>
-        <ul>
-            <li>Rarer items are less common to be shot from pipes</li>
-            <li>Rarer items are among the highest rewards for placing well in tiers</li>
-            <li>Rarer items are more expensive in shops</li>
-            <li>Rarer items have a higher Base Stat Total</li>
-            <li>Rarer items generally have a higher amount of Favorite Courses.</li>
-        </ul>
-        <img src="images/MK8D_Toad_Mechanic_Artwork.webp" alt="Toad Artwork">
-        <img src="images/MKT_Icon_Ruby_2.webp" alt="Rubies">
-        <h4>Coins Tokens and Rubies</h4>
-        <p>Coins, Tokens and Rubies are the main forms of currency in Mario Kart Tour. Each currency has a different use:</p>
+        <div class="banner-div">
+            <h2>Rarity</h2>
+            <img id="gt-toad-img" src="images/MK8D_Toad_Mechanic_Artwork.webp" alt="Toad Artwork">
+            <p class="center-body-p">	Keep in mind that an item’s rarity affects how hard it is to obtain that item. For instance, High-end Drivers are harder to get than a Super Driver. A Super Driver is harder to get than a Normal Driver. Rarity also affects other things as well:</p>
+            <p></p>
+            <ul class="center-body-p">
+                <li>Rarer items are less common to be shot from pipes</li>
+                <li>Rarer items are among the highest rewards for placing well in tiers</li>
+                <li>Rarer items are more expensive in shops</li>
+                <li>Rarer items have a higher Base Stat Total</li>
+                <li>Rarer items generally have a higher amount of Favorite Courses.</li>
+            </ul>
+        </div>
+        <h2>Coins Tokens and Rubies</h2>
+        <p class="center-text">Coins, Tokens and Rubies are the main forms of currency in Mario Kart Tour. Each currency has a different use:</p>
+        <img id="gt-rubies-img" src="images/MKT_Icon_Ruby_2.webp" alt="Rubies">
         <ul>
             <li>Coins are collected from races as you pick them off the road, collect them as items, or gain every 1,000 points from a race. They can be used to buy things in the Daily Selects shop or the Tier Shop. You can also get a bunch of coins in Coin Rush</li>
             <li>Tokens are collected from races. It varies from tour to tour how to collect them, but generally tokens are collected from finding them in races, or by making opponents crash. Tour Tokens can only be redeemed in the Token Shop. Unlike other currencies, Tour Tokens are not carried over from Tour to Tour and will reset once a Tour finishes.</li>
             <li>Rubies are collected from Tour Gifts, completed Challenges, and the Token Shop. You can use them to purchase items in the Spotlight Shop and Mii Racing Suit Shop. Rubies are the rarest of the currencies and the hardest to collect. You can also use rubies to activate Coin Rush, but… why would you do that?</li>
         </ul>
-        <a class="button" href="index.html">Getting Started</a>
-        <a class="button" href="getting-high-scores.html">Getting High Scores</a>
+        <div class="end-grid">
+            <a  class="left-button" href="index.html">Getting Started</a>
+            <a  class="right-button" href="getting-high-scores.html">Getting High Scores</a>
+        </div>
     </main>
     <footer>
         <p>Mario Kart Tour Guide &copy; 2023 - James Gassaway</p>
