MKTG ghs first push

--- a/mktproject/general-tips.html
+++ b/mktproject/general-tips.html
@@ -47,7 +47,7 @@
                 <li>Purchasing them with real money as microtransactions</li>
             </ul>
         <div class="banner-div">
-            <h2>Rarity</h2>
+            <h2 class="white-title">Rarity</h2>
             <img id="gt-toad-img" src="images/MK8D_Toad_Mechanic_Artwork.webp" alt="Toad Artwork">
             <p class="center-body-p">	Keep in mind that an item’s rarity affects how hard it is to obtain that item. For instance, High-end Drivers are harder to get than a Super Driver. A Super Driver is harder to get than a Normal Driver. Rarity also affects other things as well:</p>
             <p></p>
@@ -56,7 +56,7 @@
                 <li>Rarer items are among the highest rewards for placing well in tiers</li>
                 <li>Rarer items are more expensive in shops</li>
                 <li>Rarer items have a higher Base Stat Total</li>
-                <li>Rarer items generally have a higher amount of Favorite Courses.</li>
+                <li>Rarer items generally have a higher amount of Favorite Courses</li>
             </ul>
         </div>
         <h2>Coins Tokens and Rubies</h2>
@@ -75,7 +75,7 @@
     <footer>
         <p>Mario Kart Tour Guide &copy; 2023 - James Gassaway</p>
         <p>All Images were pulled from mariowiki.com</p>
-        <div class="social">
+        <div>
             <a href="#" target="_blank">Back to Top</a>
         </div>
     </footer>
