--- a/mktproject/index.html
+++ b/mktproject/index.html
@@ -20,7 +20,7 @@
     </header>
     <div id="banner">
         <div id="banner-box">
-            <img id="banner-img" src="images/Mario_Kart_Tour_banner.webp" alt="Mario Kart Tour Banner">
+            <img class="banner-img" src="images/Mario_Kart_Tour_banner.webp" alt="Mario Kart Tour Banner">
         </div>
         <section id="banner-msg">
             <h1>The Online Guide for Mario Kart Tour!</h1>
@@ -49,7 +49,7 @@
         </p>
         </p>
         <div id="home-card">
-            <h2>Discover More:</h2>
+            <h2 class="white-title">Discover More:</h2>
             <div id="home-grid">
                     <img id="home-grid-gt-img" src="images/MK8D_Toad_Mechanic_Artwork.webp" alt="Mario and Toad"></a>
                     <a  id="home-grid-gt-p" href="general-tips.html"><h4>General Tips</h4></a>
@@ -61,7 +61,7 @@
     <footer>
         <p>Mario Kart Tour Guide &copy; 2023 - James Gassaway</p>
         <p>All Images were pulled from www.mariowiki.com</p>
-        <div class="social">
+        <div>
             <a href="#" target="_blank">Back to Top</a>
         </div>
     </footer>
