--- a/mktproject/index.html
+++ b/mktproject/index.html
@@ -47,13 +47,12 @@
         <p class="center-body-p">
             Unlocking stuff makes it easier to earn points and reach high scores. While Mario Kart Tour may seem a lot different from other games in the series at first, you'll discover over time that the core of the game is still Mario Kart.
         </p>
-        </p>
         <div id="home-card">
             <h2 class="white-title">Discover More:</h2>
             <div id="home-grid">
-                    <img id="home-grid-gt-img" src="images/MK8D_Toad_Mechanic_Artwork.webp" alt="Mario and Toad"></a>
+                    <img id="home-grid-gt-img" src="images/MK8D_Toad_Mechanic_Artwork.webp" alt="Mario and Toad">
                     <a  id="home-grid-gt-p" href="general-tips.html"><h4>General Tips</h4></a>
-                    <img id="home-grid-ghs-img" src="images/800px-MKT_Lakitu_artwork.png" alt="Lakitu"></a>
+                    <img id="home-grid-ghs-img" src="images/800px-MKT_Lakitu_artwork.png" alt="Lakitu">
                     <a  id="home-grid-ghs-p" href="getting-high-scores.html"><h4>Getting High Scoress</h4></a>
             </div>
         </div>
