--- a/mktproject/getting-high-scores.html
+++ b/mktproject/getting-high-scores.html
@@ -60,7 +60,7 @@
 
             <button class="accordion">Collecting coins and mushrooms off the road</button>
             <div class="panel">
-              <p>Collecting Coins and Mushrooms will give you a bunch of Bonus points and extend your combos.</p>
+              <p>Collecting Coins and Mushrooms will give you a bunch of Bonus Points and extend your combos.</p>
             </div>
 
             <button class="accordion">Hitting Opponents with Items</button>
